inline elements now available

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <h1>About him</h1>
       <p>
         Im Jahr 2022 war er eine Zeit lang der reichste Mensch der Welt, bis der
-        erste Platz wegen des Wertverlusts von Tesla und nach dem Kauf des
+        <span>erste Platz wegen des Wertverlusts von Tesla und nach dem Kauf des</span>
         Kurznachrichtendienstes Twitter an Bernard Arnault fiel
       </p>
     </article>
@@ -44,17 +44,21 @@
       <li>Listelement4</li>
     </ul>
     <div>
-      Musk wurde 1971 in Pretoria als Sohn der kanadischstämmigen Autorin, Model
+      Musk wurde<stong>!</stong> 1971 in Pretoria als <em>Sohn</em> der kanadischstämmigen Autorin, Model
       und Ernährungsberaterin Maye Musk (geborene Haldeman) geboren. Sein Vater
       ist der südafrikanische Maschinenbauingenieur Errol Musk
     </div>
+<br>
+<br>
+    <code>button{/yes}</code>
+
     <section>
       <h1>Hobbies</h1>
       <ol>
         <li>
           <a href="https://de.wikipedia.org/wiki/Elon_Musk">Listelement1</a>
         </li>
-        <li>Listelement2</li>
+        <li>List<a>-</a>element2</li>
         <li>Listelement3</li>
         <li>Listelement4</li>
       </ol>
